samples/express/views/errors/no-super-block-parent.njk
<!DOCTYPE html>
<html>
<head><title>Parent with Empty Block</title></head>
<body>
  {% block content %}{{ super() }}{% endblock %}
</body>
</html>
